kubernetes-resources/kafka/kafka-operator/service-kafka-operator-operator.yaml
# Source: kafka-operator/templates/operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "kafka-operator-operator"
  labels:
    app.kubernetes.io/name: kafka-operator
    app.kubernetes.io/component: operator
spec:
  selector:
    app.kubernetes.io/name: kafka-operator
    app.kubernetes.io/component: operator
  ports:
  - name: https
    port: 443
