kubernetes-resources/kafka/kafka-operator/validatingwebhookconfiguration-kafka-operator-validating-webhook.yaml
# Source: kafka-operator/templates/operator-deployment-with-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app.kubernetes.io/name: kafka-operator
    app.kubernetes.io/component: webhook
  name: kafka-operator-validating-webhook
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURKRENDQWd5Z0F3SUJBZ0lSQUtwcGo4TnVxKzJPS1crOVVzK1g2dGN3RFFZSktvWklodmNOQVFFTEJRQXcKSERFYU1CZ0dBMVVFQXhNUmEyRm1hMkV0YjNCbGNtRjBiM0l0WTJFd0hoY05NakV4TWpFd01UUXhNVEl5V2hjTgpNekV4TWpBNE1UUXhNVEl5V2pBY01Sb3dHQVlEVlFRREV4RnJZV1pyWVMxdmNHVnlZWFJ2Y2kxallUQ0NBU0l3CkRRWUpLb1pJaHZjTkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFQTzhLR2V0bFJacTVobnFURnNOTDdWaVVwLy8KMHdlSk8vKzBrQ3ZsMTNZSXpENjZqRFlZeVVVcEd5SDgySytyQjlKQWV3eVY3TGdrV3g5cjVDV3RpZXAxNXB6RgpvTHNuY3N0VGdDQ2 [...]
    service:
      name: "kafka-operator-operator"
      namespace: infrastructure-dependencies
      path: /validate
  failurePolicy: Fail
  name: kafkatopics.kafka.banzaicloud.io
  rules:
  - apiGroups:
    - kafka.banzaicloud.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kafkatopics
  sideEffects: None
